--- a/css/main.css
+++ b/css/main.css
@@ -1051,8 +1051,13 @@ img.full-width {
 /* About
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .about {
-  padding: 4em 0;
-  text-align: center;
+    padding: 4em 0;
+}
+.about p{
+      font-size: 18px;
+    color: #333;
+    font-weight: 400;
+    text-align: justify;
 }
 .twitter-carousel {
   padding: 4em 0;
